# bezierview

./: README.md  setup.cfg
src/bezierview/: __init__.py  bezier.py  view.py
tests/: bezier_test.py  play.py
